# bit-of-ai

./: .gitignore  README.md  pyproject.toml
bit-of-ai/: ai_compiler_design.md  all_questions.md  avx_mul.cpp  avx_mul.hpp  qat.py  torch_fx.py
bit-of-ai/avx/: avx_mul.cpp  avx_mul.hpp  performance_comp.cpp
bit-of-ai/flash-attn/: blockwise.py
bit-of-ai/kvcache/: kv_causal_attention.py  kv_gpt2.py
bit-of-ai/quant_pipeline/: README.md  dataloader.py  model_tracer.py  optimize_graph.py  pipeline.py  quantization.py  simple_cnn.py
bit-of-ai/quant_pipeline/data/wikitext-2-v1/test/: state.json
bit-of-ai/quant_pipeline/data/wikitext-2-v1/train/: state.json
bit-of-ai/quant_pipeline/data/wikitext-2-v1/validation/: dataset_info.json  state.json
coding_interview/: ai_compiler_coding.py  gil.py
